--- a/Views/template/css/general.css
+++ b/Views/template/css/general.css
@@ -28,3 +28,11 @@ footer {
 	font-size: 30px;
 	text-decoration: none;
 }
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+  vertical-align: middle;
+}
